--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-timepicker": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
