--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "",
     "scripts": {
         "start": "parcel index.html",
-        "build": "parcel build index.html"
+        "build": "parcel build index.html",
+        "test": "jest --coverage"
     },
     "license": "MIT",
     "dependencies": {
-        "jest": "^25.1.0",
         "moment": "^2.24.0",
         "node-sass": "^4.13.1",
         "react": "^16.9.0",
@@ -18,6 +18,7 @@
     "devDependencies": {
         "@babel/core": "^7.5.5",
         "babel-preset-nano-react-app": "^0.1.0",
+        "jest": "^25.1.0",
         "parcel-bundler": "^1.12.3"
     },
     "babel": {
