--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "parcel index.html",
         "build": "parcel build index.html",
-        "test": "jest --coverage"
+        "test": "jest --coverage --watchAll"
     },
     "license": "MIT",
     "dependencies": {
@@ -17,13 +17,19 @@
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.8.4",
+        "@babel/preset-react": "^7.8.3",
+        "babel-jest": "^25.1.0",
         "babel-preset-nano-react-app": "^0.1.0",
         "jest": "^25.1.0",
-        "parcel-bundler": "^1.12.3"
+        "parcel-bundler": "^1.12.3",
+        "react-test-renderer": "^16.12.0"
     },
     "babel": {
         "presets": [
-            "nano-react-app"
+            "nano-react-app",
+            "@babel/preset-env",
+            "@babel/preset-react"
         ],
         "plugins": [
             [
