--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "node-sass": "^4.13.1",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
-        "react-timepicker": "^2.0.2"
+        "react-timepicker": "git+https://github.com/andrew-rayco/react-timepicker.git"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
