--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@babel/core": "^7.5.5",
         "@babel/preset-env": "^7.8.4",
         "@babel/preset-react": "^7.8.3",
+        "@testing-library/react": "^9.4.1",
         "babel-jest": "^25.1.0",
         "babel-preset-nano-react-app": "^0.1.0",
         "jest": "^25.1.0",
