--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@testing-library/react": "^9.4.1",
         "babel-jest": "^25.1.0",
         "babel-preset-nano-react-app": "^0.1.0",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^25.1.0",
         "parcel-bundler": "^1.12.3",
         "react-test-renderer": "^16.12.0"
@@ -49,5 +50,12 @@
     },
     "engines": {
         "node": "10"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "identity-obj-proxy",
+            "\\.(scss)$": "<rootDir>/src/config/CSSStub.js"
+        }
     }
 }
