--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "firebase": "^7.9.3",
         "moment": "^2.24.0",
         "node-sass": "^4.13.1",
         "react": "^16.9.0",
