--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "firebase": "^7.9.3",
         "moment": "^2.24.0",
+        "moment-duration-format": "^2.3.2",
         "node-sass": "^4.13.1",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
