--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         ]
     },
     "engines": {
-        "node": "10"
+        "node": "10.19.0",
+        "yarn": "1.22.0"
     },
     "jest": {
         "moduleNameMapper": {
