--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^25.1.0",
         "parcel-bundler": "^1.12.3",
+        "prop-types": "^15.7.2",
         "react-test-renderer": "^16.12.0"
     },
     "babel": {
